--- a/Cargo.toml
+++ b/Cargo.toml
@@ -33,11 +33,12 @@ printf-compat = { version = "0.3", default-features = false }
 
 [target.'cfg(windows)'.dependencies]
 windows-sys = { version = "0.59.0", features = [
-    "Win32_System_Diagnostics_Debug", 
-    "Win32_System_LibraryLoader", 
-    "Win32_System_Memory",  
-    "Win32_System_SystemServices", 
+    "Win32_System_Diagnostics_Debug",
+    "Win32_System_LibraryLoader",
+    "Win32_System_Memory",
+    "Win32_System_SystemServices",
     "Win32_System_Threading",
+    "Win32_System_Kernel",
     "Win32_Security",
     "Win32_Storage_FileSystem",
     "Win32_System_IO",
