--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,6 +26,7 @@ log = "0.4.22"
 obfstr = "0.4.4"
 dinvk = "0.4.2"
 const-hashes = { path = "../const-hashes" }
+const-encrypt = { path = "../const-encrypt" }
 spin = { version = "0.10.0", default-features = false }
 thiserror = { version = "2.0.12", default-features = false }
 hex = { version = "0.4.3", default-features = false, features = ["alloc"] }
