--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,27 +24,31 @@ doctest = false
 [dependencies]
 log = "0.4.22"
 obfstr = "0.4.4"
-dinvk = "0.4.2"
 const-hashes = { path = "../const-hashes" }
 const-encrypt = { path = "../const-encrypt" }
-spin = { version = "0.10.0", default-features = false }
+spin = { version = "0.10.0", default-features = false, features = ["mutex", "spin_mutex"] }
 thiserror = { version = "2.0.12", default-features = false }
 hex = { version = "0.4.3", default-features = false, features = ["alloc"] }
 printf-compat = { version = "0.3", default-features = false }
 
 [target.'cfg(windows)'.dependencies]
-windows-sys = { version = "0.59.0", features = [
+dinvoke = { path = "../dinvoke" }
+
+[target.'cfg(windows)'.dependencies.windows]
+version = "0.62"
+features = [
+    "Win32_Foundation",
     "Win32_System_Diagnostics_Debug",
     "Win32_System_LibraryLoader",
     "Win32_System_Memory",
+    "Win32_System_SystemInformation",
     "Win32_System_SystemServices",
     "Win32_System_Threading",
     "Win32_System_Kernel",
     "Win32_Security",
     "Win32_Storage_FileSystem",
     "Win32_System_IO",
-    "Win32_System_WindowsProgramming"
-]}
+]
 
 [package.metadata.docs.rs]
 default-target = "x86_64-pc-windows-msvc"
